--- a/shoping-recipe-item/src/app/app.component.html
+++ b/shoping-recipe-item/src/app/app.component.html
@@ -1,6 +1,9 @@
-
+<app-header></app-header>
 <div class="container">
-  <app-header></app-header>
-  <button class="btn btn-danger">Hello</button>
-  
+  <div class="row">
+    <div class="col-md-12">
+      <app-recipes></app-recipes>
+      <app-shoping-list></app-shoping-list>
+    </div>
+  </div>
 </div>
