--- a/shopping-recipe-item/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/shopping-recipe-item/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,22 @@
-<app-recipe-item></app-recipe-item>
+
+<div class="row">
+    <div class="col-12">
+        <button class="btn btn-success">New recipe</button>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-12">
+        <a href="#" class="list-group-item list-group-item-secondary clearfix" *ngFor="let recipe of recipes">
+            <div class="float-left">
+                <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+                <p class="list-group-item-text">{{recipe.description}}</p>
+            </div>
+            <span class="float-right">
+                <img src="{{recipe.imagePath}}" alt="{{recipe.name}}" class="img-fluid" style="max-width:90px; height:80px;">
+            </span>
+        </a>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div>
+
